[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "micropki"
version = "0.1.0"
description = "MicroPKI Utility - Инфраструктура открытых ключей"
requires-python = ">=3.8"
dependencies = [
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
micropki = "micropki.cli:main"